redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redislb
spec:
  selector:
    matchLabels:
      app: redislb
  replicas: 1
  template:
    metadata:
      labels:
        app: redislb
    spec:
      volumes:
      - name: v2stockage
        persistentVolumeClaim:
          claimName: pvcclaim
      containers:
      - name: redis
        image: redis
        args: ["--requirepass", "$(REDIS_PWD)"]
        volumeMounts:
        - mountPath: "/data"
          name: v2stockage
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: clustredis
spec:
  type: ClusterIP
  ports:
  - port: 6379
  selector:
    app: redislb
