vottingapp2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voteapp
  labels:
    app: voteapplb
spec:
  selector:
    matchLabels:
      app: voteapplb
  replicas: 2
  template:
    metadata:
      labels:
        app: voteapplb
    spec:
      containers:
      - name: voteapp
        image: davidmosad/vote-app:TAG
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 250m
---
apiVersion: v1
kind: Service
metadata:
  name: clusterapp
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: voteapplb
