ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressgtw
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls: 
    - secretName: ingress-tls
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: clusterapp 
            port:
              number: 80
